docs/7.55/md/abenlogexp_op.md
---
title: "Continue"
description: |
  rel_exp - Comparison Operators for All Data Types(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_compare_all.htm) rel_exp - Comparison Operators for Character-Like Data Types(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_strings.htm) rel_exp - C
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_op.htm"
abapFile: "abenlogexp_op.htm"
keywords: ["select", "do", "data", "types", "abenlogexp"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [Program Flow Logic](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_flow_logic.htm) →  [Expressions and Functions for Conditions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogical_expr_func.htm) →  [Logical Expressions (log\_exp)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp.htm) →  [Comparison Expressions (rel\_exp)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_comp.htm) → 

rel\_exp - Comparison Operators

Depending on the operands that can be compared with each other, the following groups of comparison operators for comparison expressions can be distinguished:

-   Comparison operators for all data types
    [\=, EQ, <>, NE, \>, GT, <, LT, \>=, GE, <=, LE](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_any_operand.htm)
    [BETWEEN](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_between.htm)
    [IN](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_select_option.htm)
    

-   Comparison operators for character-like data types
    [CO, CN, CA, NA, CS, NS, CP, NP](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_strings.htm)

-   Comparison operators for byte-like data types
    [BYTE-CO, BYTE-CN, BYTE-CA, BYTE-NA, BYTE-CS, BYTE-NS](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_bytes.htm)

-   Comparison operators for bit patterns
    [O, Z, M](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_bitmasks.htm)

Continue
[rel\_exp - Comparison Operators for All Data Types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_compare_all.htm)
[rel\_exp - Comparison Operators for Character-Like Data Types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_strings.htm)
[rel\_exp - Comparison Operators for Byte-Like Data Types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_bytes.htm)
[rel\_exp - Comparison Operators for Bit Patterns](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenlogexp_bitmasks.htm)